2006-07-19  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/*-performer.cc: Converted try_music to listen_*

	* lily/grob-info.cc, lily/engraver.cc: represent the cause of grob
	as a stream-event internally. Introduce event_cause (), deprecate
	music_cause ().

	* scm/define-music-types.scm: Removed BusyPlayingEvent
	
2006-07-19  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/advanced-notation.itely (Font selection):
	Document how to get a list of available fonts using
	'lilypond -dshow-available-fonts blabla'.

2006-07-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* GNUmakefile.in: filter lily-XXX.pdf files.

	* scm/define-grob-interfaces.scm (bend-after-interface): add thickness.

	* scm/define-grob-properties.scm (all-internal-grob-properties):
	remove delta-pitch. Use delta-position everywhere.

	* scm/output-lib.scm (fall::print): use new order.

	* scm/output-ps.scm (path): reorder arguments.

	* scm/output-svg.scm (path): support for path primitive.

	* input/regression/bend-after.ly: new file.

	* Documentation/user/GNUmakefile ($(outdir)/%.pdf): foolproof
	recipe for eps -> pdf conversion.

2006-07-19  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/parser.yy, lily/lexer.ll: added some simplifications by
	Angelo Contardi.

2006-07-19  Graham Percival  <gpermus@gmail.com>

	* input/manual/screech-boink.ly: moved to here.

	* input/screech-boink.ly: deleted.

	* scm/define-grob-properties.scm: clarify doc string.

2006-07-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/topdocs/NEWS.tely (Top): doc new feature.

	* scm/output-ps.scm (path): define path.

	* scm/define-stencil-commands.scm
	(ly:register-stencil-expression): add path.

	* scm/define-music-properties.scm (all-music-properties): add delta-pitch.

	* ly/engraver-init.ly: add Fall_engraver

	* lily/parser.yy (music_function_event): allow musicfunction
	without music arg as music_function_event.

	* lily/grob-scheme.cc (LY_DEFINE):