@@ -1,3 +1,10 @@
+2006-07-20  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* lily/tuplet-engraver.cc (struct Tuplet_description): read
+	tupletFullLengthNote too. Choose right bound depending on value.
+
+	* input/regression/tuplet-full-length-note.ly: new file.
+
 2006-07-19  Erik Sandberg  <mandolaerik@gmail.com>
 
 	* lily/*-performer.cc: Converted try_music to listen_*
@@ -11,8 +18,8 @@
 2006-07-19  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* Documentation/user/advanced-notation.itely (Font selection):
-	Document how to get a list of available fonts using
-	'lilypond -dshow-available-fonts blabla'.
+	Document how to get a list of available fonts using 'lilypond
+	-dshow-available-fonts blabla'.
 
 2006-07-19  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
